[gd_scene load_steps=6 format=2]

[ext_resource path="res://imagens/table.png" type="Texture" id=1]
[ext_resource path="res://imagens/Preto.png" type="Texture" id=2]
[ext_resource path="res://cenaMesa.gd" type="Script" id=3]
[ext_resource path="res://cenaBacteria.tscn" type="PackedScene" id=4]
[ext_resource path="res://cenaFungo.tscn" type="PackedScene" id=5]

[node name="cenaMesa" type="Node2D"]
script = ExtResource( 3 )

[node name="fundo" type="Sprite" parent="."]
position = Vector2( 534, 245 )
scale = Vector2( 1, 1.36728 )
texture = ExtResource( 2 )

[node name="Penicillium" type="Button" parent="."]
margin_left = 559.0
margin_top = 308.0
margin_right = 732.0
margin_bottom = 422.0

[node name="Bacteria" type="Button" parent="."]
visible = false
margin_left = 315.0
margin_top = 308.0
margin_right = 501.0
margin_bottom = 419.0

[node name="mesa" type="Sprite" parent="."]
position = Vector2( 523, 322 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )

[node name="cenaFungo" parent="." instance=ExtResource( 5 )]
visible = false

[node name="cenaBacteria" parent="." instance=ExtResource( 4 )]
visible = false

[node name="mouse" type="Sprite" parent="."]

[connection signal="pressed" from="Penicillium" to="." method="_on_Penicillium_pressed"]
[connection signal="pressed" from="Bacteria" to="." method="_on_Bacteria_pressed"]
